--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="row">
 					<div class="col-12 col-md-7">
 						<h1 class="title">About me...</h1>
-						<p class="subtitle">I'm <i>Adnan Majid Mir</i> a professional Data Analyst.</p>
+						<p class="subtitle">Hello Folke! <br> My Name is <i>Adnan Majid Mir</i>.</p>
 					</div>
 					<div class="col-12 col-md-5">
 						<p style="padding-top: 50px; padding-bottom: 90px;">
