--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 							<span class="grey">You can find me here:</span><br>
 							Handwara, Jammu & Kashmir, IN 193221 <br><br>
 							<span class="grey">Phone:</span><a href="tel:+919541185727">+91 9541185727</a> <br><br>
-							<a href="mailto:AdnanKmr@gmail.com">AdnanKmr@gmail.com</a><br>
+							<a href="mailto:AdnanKmir@gmail.com">AdnanKmir@gmail.com</a><br>
 						</p>
 						<p><a href="https://github.com/AdnanMir1"><i class="fa fa-github"></i></a>
 							<a href="https://www.linkedin.com/in/miradnan1"><i class="fa fa-linkedin"></i></a>
