--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 						<h2>Contact Information</h2>
 						<p style="color:white;">
 							<span class="grey">You can find me here:</span><br>
-							Handwara, Jammu & Kashmir, IN 193221 <br><br>
+							New Delhi, IN 110001 <br><br>
 							<span class="grey">Phone:</span><a href="tel:+919541185727">+91 9541185727</a> <br><br>
 							<a href="mailto:AdnanKmir@gmail.com">AdnanKmir@gmail.com</a><br>
 						</p>
